# chatbot-Faiss

./: .gitignore  AIChat.py  FaissUpload.py  LICENSE  README.md  chat_layout.py  main.py  popup_color_item.py  pyproject.toml  requirements.txt  setting_api.py
module_langchain/: QAchain.py  embedding_faiss.py
openai_faiss_chat/: chat_layout.py  main.py
openai_faiss_chat/module_langchain/: embedding_faiss.py  qachain.py  trans.py
openai_faiss_chat/pageitem/: aichat.py  making_faiss.py  merge_faiss.py  setting_api.py
